--- a/cicd_v1/eks-cluster.yml
+++ b/cicd_v1/eks-cluster.yml
@@ -7,7 +7,7 @@ metadata:
 
 nodeGroups:
   - name: kag-eksctl-ng-1
-    instanceType: t2.small
+    instanceType: t2.large
     desiredCapacity: 3
     ssh:
       publicKeyName: kabirg
